gcc/testsuite/rust/rustc/ui/issues/issue-43925.rs
#[link(name="foo", cfg("rlib"))] // { dg-error "" "" { target *-*-* } }
extern {}

fn main() {}

